add monthly transaction method